--- a/app.component.html
+++ b/app.component.html
@@ -39,7 +39,7 @@
     margin: -8px;
     display: flex;
     align-items: center;
-    background-color: #19d2d2;
+    background-color: #1976d2;
     color: white;
     font-weight: 600;
   }
@@ -125,7 +125,7 @@
   }
 
   .card.highlight-card {
-    background-color: #19d2d2;
+    background-color: #1976d2;
     color: white;
     font-weight: 600;
     border: none;
